# face_rec

./: CMakeLists.txt  README  TODO  add_new_face_image_handler.cpp  add_new_person_image_handler.cpp  add_new_person_image_handler.h  available_people_model.cpp  available_people_model.h  base_image_handler.cpp  base_image_handler.h  base_people_model.cpp  base_people_model.h  face_recognition_image_handler.cpp  face_recognition_image_handler.h  image_handler.cpp  image_handler.h  individual_file_manager.cpp  individual_file_manager.h  individual_manager.cpp  individual_manager.h  left_vertical_menu_bar_model.cpp  left_vertical_menu_bar_model.h  main.cpp  people_manager.cpp  people_manager.h  processed_images_provider.cpp  processed_images_provider.h  qml.qrc  selected_images_model.cpp  selected_images_model.h  selected_people_model.cpp  selected_people_model.h
image_handlers/: add_new_face_image_handler.cpp  add_new_face_image_handler.h  base_image_handler.cpp  base_image_handler.h  face_recognition_image_handler.cpp  face_recognition_image_handler.h
other/: individual_file_manager.cpp  individual_manager.cpp  individual_manager.h  selected_images_model.cpp
people_models/: available_people_model.cpp  available_people_model.h  base_people_model.cpp  selected_people_model.cpp
qml/: Add_new_person_page.qml  Custom_button.qml  Edit_individual_page.qml  Full_screen_img.qml  Help_page.qml  Left_vertical_menu_bar_model.qml  People_list_delegate.qml  People_page.qml  Wait_page.qml  Wait_page_2.qml  main.qml
qml/People_page_items/: Add_new_person_page.qml  Custom_button.qml  Full_screen_img.qml  Processed_photos_delegate.qml  Selected_photos_delegate.qml
qml/common/: Close_btn.qml  Custom_btn.qml  Custom_btn_2.qml  Default_page.qml  Full_screen_img.qml  Scroll_bar.qml  Wait_page.qml  Wait_page_2.qml  Wait_page_with_button.qml
qml/delegates/: People_list.qml  Processed_photos.qml  Recognition_people_list_delegate.qml  Selected_photos.qml
qml/main/: Default_page.qml  Left_vertical_menu_bar_model.qml  main.qml
qml/main_pages/help_page/: Help_page.qml
qml/main_pages/people_page/: Add_new_person_page.qml  Edit_individual_page.qml  People_page.qml
qml/main_pages/recognition_page/: Recognition_page_stack_view.qml  Step_1.qml  Step_2.qml
